--- a/_layouts/ocupa_silo.html
+++ b/_layouts/ocupa_silo.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    {% include head.html %} {% include meta.html %}
+    {% include head.html %} 
   </head>
   <body>
     {% include newsletter-popup.html %} {% include menu.html %}
