--- a/_includes/head.html
+++ b/_includes/head.html
@@ -89,3 +89,16 @@
   gtag('config', 'G-VE4PHTSLT7');
 </script>
 
+<script defer src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+<script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", (user) => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
