--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -24,7 +24,7 @@
               {% assign cats = cats | prepend: "cat-" %}
             {% endif %}
             <a class="list-item {{ cats }}" href="{{ site.baseurl }}{{ post.url }}" >
-              <div class="list-item-image" style="background-image: url('{{ pCover }}');">
+              <div class="list-item-image" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgb(0 0 0 / 68%), rgb(0 0 0)), url('{{ pCover }}')">
                 <div class="list-item-title">{{ post.title }}
                 </div>
               </div>
