--- a/_includes/related-news.html
+++ b/_includes/related-news.html
@@ -47,7 +47,7 @@
       <a class="list-item" href="{{ site.baseurl }}{{ post.url }}">
         <div
           class="list-item-image"
-          style="background-image: url('{{ pCover }}');"
+          style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgb(0 0 0 / 68%), rgb(0 0 0)), url('{{ pCover }}')"
         >
           <div class="list-item-title">{{ post.title }}</div>
         </div>
