:sparkles: (home e about page) novo recurso adicionado as paginas de home e about

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,6 +32,9 @@
       <a class="footer-recursos-a" href="https://www.fordfoundation.org/" target="_blank">
         <img class="footer-recursos-img" src="{{ site.baseurl }}/media/images/logos/ford_black.svg" alt="Ford Foundation">
       </a>
+      <a class="footer-recursos-a" href="https://bemtevidiversidade.org.br/" target="_blank">
+        <img class="footer-recursos-img" src="{{ site.baseurl }}/media/images/logos/Bem-Te-Vi-Diversidade_sitesilo.svg" alt="Bem Te Vi Diversidade">
+      </a>
       <br>
     </div>
 
