--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,10 +27,13 @@
         <img class="footer-recursos-img" src="{{ site.baseurl }}/media/images/logos/footer/porticus.svg" alt="Porticus">
       </a>
       <a class="footer-recursos-a" href="https://communityartslab.org/" target="_blank">
-        <img class="footer-recursos-img" style="margin-top: 40px; margin-bottom: 20px;" src="{{ site.baseurl }}/media/images/logos/footer/community_arts_logo.svg" alt="Community Arts Lab">
+        <img class="footer-recursos-img footer-recursos-img-margin" src="{{ site.baseurl }}/media/images/logos/footer/community_arts_logo.svg" alt="Community Arts Lab">
       </a>
       <a class="footer-recursos-a" href="https://www.fordfoundation.org/" target="_blank">
         <img class="footer-recursos-img" src="{{ site.baseurl }}/media/images/logos/ford_black.svg" alt="Ford Foundation">
+      </a>
+      <a class="footer-recursos-a" href="https://bemtevidiversidade.org.br/" target="_blank">
+        <img class="footer-recursos-img-small footer-recursos-img-margin" src="{{ site.baseurl }}/media/images/logos/Bem-Te-Vi-Diversidade_sitesilo.svg" alt="Bem Te Vi Diversidade">
       </a>
       <br>
     </div>
